<resources>
    <string name="app_name">RANDrink</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ok">OK</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="verstanden">Verstanden</string>
    <string name="einzelsschluck">ein Schluck</string>
    <string name="mehrzahlschluck">Schlücke</string>
    <string name="aufgaben">Aufgaben</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="shop">Shop</string>
    <string name="vieltrinker">Vieltrinker</string>
    <string name="tp_name">Spielername</string>
    <string name="zufall_an">Zufall an</string>
    <string name="zufall_aus">Zufall aus</string>
    <string name="hinzufuegen">Hinzufügen </string>
    <string name="start">Starten</string>
    <string name="spielernamenstart">Aktuell sind noch keine Spieler hinzugefügt</string>
    <string name="spielernamen">Es gibt folgende Spieler:  </string>
    <string name="anzahlshots">Schluckanzahl:</string>
    <string name="rundenbasis">Rundenbasis</string>
    <string name="rundenbasis_info_title">Rundenbasis</string>
    <string name="rundenbasis_info_text">Wenn du Rundenbasis anklickst, kannst du die maximale Anzahl der Runden in diesem Spiel einstellen. Sobald jemand verloren hat ist eine Runde vorbei</string>
    <string name="zufall_info_title">Zufallerklärung</string>
    <string name="zufall_info_text">Wenn ihr die Zufallsoption einschaltet, dann ist die Reihenfolge in welcher die Spieler dran kommen zufällig. Ich mein, das sagt ja schon der Name.</string>
    <string name="alter_spielername_title">Spielername leer</string>
    <string name="alter_spielername_message">Der Spielername ist leer</string>
    <string name="alter_spieler_title">Es sind zu wenige Spieler!</string>
    <string name="alter_spieler_message">Es müssen mindestens 2 Spieler sein</string>
    <string name="t_add"> wurde hinzugefügt </string>
    <string name="add_spieler_fehler"> konnte nicht hinzugefügt werden! Spielername exestiert bereits!</string>
    <string name="add_spieler_fehler_laenge">konnte nicht hinzugefügt werden. Spielername ist zu lang!</string>
    <string name="alter_kategorie_title">Keine Kategorie</string>
    <string name="alter_kategorie_message">Es wurde keine Kategorie ausgewählt</string>
    <string name="alert_bewusstes_saufen_title">Vorsicht Alkohol</string>
    <string name="alert_bewusstes_saufen_message">Der Missbrauch von Alkohol ist gesundheitsschädigend. Wenn ihr fortfahrt bestätigt ihr, dass eventuelle Konsequenzen wissentlich in Kauf genommen werden.</string>
    <string name="regeln_rundenzahl">Spielende Runden: </string>
    <string name="naechsterspieler">-></string>
    <string name="Kopf">Kopf</string>
    <string name="Zahl">Zahl</string>
    <string name="entscheidung">Kopf oder Zahl</string>
    <string name="glueck_kopf">Glück gehabt!</string>
    <string name="pech_kopf">Pech gehabt! Hebt das Glas!</string>
    <string name="glueck_zahl">Glück gehabt!</string>
    <string name="pech_zahl">Pech gehabt! Jetzt wird getrunken!</string>
    <string name="aufgabevorhanden">Aufgaben: </string>
    <string name="wartenvid">Münze wird geworfen</string>
    <string name="switchvideo">Münzwurf an</string>
    <string name="alter_spielende_title">Spiel beenden?</string>
    <string name="alter_spielende_message">Soll das Spiel wirklich beendet werden?</string>
    <string name="alter_spielerloeschen_title">Es sind zu wenige Spieler</string>
    <string name="alter_spieleerloeschen_message">Ihr müsst mindestens 2 Spieler sein</string>
    <string name="alter_spielerfrage">Welcher Spieler soll gelöscht werden?</string>
    <string name="alert_werbefrei_title">Werbefrei spielen?</string>
    <string name="alert_werbefrei_message1">Möchtest du die nächsten </string>
    <string name="alert_werbefrei_message2"> Runden werbefrei spielen? Dann schau dir dieses kurze Video an.</string>
    <string name="alert_halbzeit_title">Halbzeit</string>
    <string name="alert_halbzeit_message1">Ihr habt die Hälfte geschafft! Könnt ihr noch weiterspielen? Es sind noch</string>
    <string name="alert_halbzeit_message2"> Aufgaben.</string>
    <string name="t_loschen"> wurde gelöscht </string>
    <string name="spieleradd">+</string>
    <string name="alter_spielerhinzufügen_title">Spieler hinzufügen</string>
    <string name="alter_spielerhinzufügen_message">Bitte Spielernamen eintragen</string>
    <string name="keineaufgabe_title">Keine Aufgaben mehr</string>
    <string name="keineaufgabe_message">Es gibt keine Aufgaben mehr! Startet eine neue Runde.</string>
    <string name="alter_statistik_title">Spielstatistik</string>
    <string name="alter_statistik_message_gesamt">Gesamtrunden: </string>
    <string name="alter_statistik_message_kopf">Anzahl Kopf: </string>
    <string name="alter_statistik_message_zahl">Anzahl Zahl: </string>
    <string name="alter_statistik_message_runden">Anzahl Aufgaben: </string>
    <string name="alter_statistik_message_durchlauf">Anzahl der Durchläufe: </string>
    <string name="alert_webefrei_title">Werbefrei spielen</string>
    <string name="alert_webefrei_message">Möchtest du die nächsten 145 Minuten ohne Werbung spielen</string>
    <string name="credits">Credits</string>
    <string name="ueberuns">Über uns</string>
    <string name="teile">Teile uns</string>
    <string name="contactus">Kontaktiere uns</string>
    <string name="Bug_good">RANDrink Bug/Fehler</string>
    <string name="share_subject">RANDrink das zufällige Trinkspiel, Spiele es!</string>
    <string name="share_Text">Hey, willst du mit deinen Freunden ein neues Trinkspiel test? Dann hol dir das beste Trinkspiel im Playstore</string>
    <string name="share_auswaehlen">Wähle aus</string>
    <string name="fuenfzig">+50</string>
    <string name="rundenerklärungoben">Schaut euch Werbung an, um</string>
    <string name="rundenerklärungunten">Runden ohne Unterbrechungen zu spielen.</string>
    <string name="dark_an">Darkmode an</string>
    <string name="dark_aus">Darkmode aus</string>
    <string name="dark">Darkmode aus</string>
    <string name="switch_video_an">Münzwurf an</string>
    <string name="switch_video">Münzwurf an</string>
    <string name="switch_video_aus">Münzwurf aus</string>
    <string name="btn_sprache_speichern">Sprache Speichern</string>
    <string name="alert_title">Sprache ändern</string>
    <string name="alert_message">"Soll die Sprache geändert werden? Alle Aufgaben werden gelöscht und neu erstellt"</string>
    <string name="alert_werbung_title">Werbung entfernen</string>
    <string name="alert_antwort1">Premiumversion: $</string>
    <string name="Aufgabeadd">Aufgabe hinzufügen </string>
    <string name="change">bearbeiten</string>
    <string name="delete">löschen</string>
    <string name="record">Datensatz</string>
    <string name="Kategorie">Kategorie: </string>
    <string name="alleaufgaben">Alle Aufgaben</string>
    <string name="aufgabehint">Aufgabe hier eintragen</string>
    <string name="aufgabeleer1"></string>
    <string name="pop_up">Wenn ihr lange auf eine Aufgabe drückt, könnt ihr diese bearbeiten oder löschen</string>
    <string name="pop_up_title">Extra Features </string>
    <string name="pop_up_verstanden">Mega, teste ich gleich aus</string>
    <string name="update">Aufgabe updaten</string>
    <string name="hint_aufgabe">Aufgabe hier eintragen</string>
    <string name="Aufgabeadden">Aufgabe hinzufügen</string>
    <string name="aufgabeleer">Aufgabe darf nicht leer sein</string>
    <string name="aufgabeadded">Aufgabe wurde hinzugefügt</string>
    <string name="infoBearbeiten">Wenn ihr eine Aufgabe bearbeitet oder hinzufügt, achtet darauf, dass ein Trinke $ in der Aufgabe enthalten ist </string>
    <string name="suechtig">Du trinkst oft und viel?</string>
    <string name="anrufen">Suchtberatung</string>
    <string name="kenndeinLimit">Kenn dein Limit</string>
    <string-array name="sprachen_lang">
        <item>Deutsch</item>>
    </string-array>
    <string-array name="regeln">
        <item>Trinken muss jeder, der es getan hat. Hat es keiner getan, trinkt nur der Spieler, der die Münze geworfen hat. Hier wird in der Gruppe getrunken.</item>
        <item>Es handelt sich um ein pures Glückspiel. Folgt den Anweisungen. Hier trinkt jeder für sich.</item>
        <item>Das perfekte Spiel für alle Gamer. Folgt den Anweisungen. Hier wird in der Gruppe getrunken</item>
        <item>Das perfekte Spiel für alle die sich beim Trinken sportlich beweisen wollen. Folgt den Anweisungen. Hier wird in der Gruppe getrunken.</item>
    </string-array>
    <string name="kategroie1">Ich hab` noch nie </string>
    <string name="alter_kategorie_title1">Spielregel: Ich hab` noch nie</string>
    <string name="alter_kategorie_message1">Trinken muss jeder, der es getan hat. Hat es keiner getan, trinkt nur der Spieler, der die Münze geworfen hat. Hier wird in der Gruppe getrunken.</string>
    <string name="regeln_habnochnie">Trinken muss jeder, der es getan hat. Hat es keiner getan, trinkt nur der Spieler, der die Münze geworfen hat. Hier wird in der Gruppe getrunken.</string>
</resources>