<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context="schulzUndWitzelGbR.App.saufio.AC_bearbeiten">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pixil_button_main"
        android:fontFamily="@font/pixel_art"
        android:gravity="center"
        android:hint="@string/Aufgabeadden"
        android:onClick="aufgabe_update_add"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:soundEffectsEnabled="false"
        android:text="@string/Aufgabeadd"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="?attr/primaryTitleColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_Aufgabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="13"
        android:gravity="start|top"
        android:hint="@string/hint_aufgabe"
        android:inputType="textMultiLine"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="?attr/primaryTitleColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#549C9B9B"
        android:textColor="?attr/primaryTitleColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/et_Aufgabe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/infoBearbeiten"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="?attr/primaryTitleColor"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
        app:layout_constraintVertical_bias="0.23" />

</androidx.constraintlayout.widget.ConstraintLayout>