<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:visibility="visible"
    tools:context="schulzUndWitzelGbR.App.saufio.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <CheckBox
        android:id="@+id/cb_kinder"
        android:layout_width="122dp"
        android:layout_height="16dp"
        android:text="@string/rundenbasis"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/etn_sucht"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="52dp"
        android:layout_height="18dp"
        android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
        android:scrollbarThumbVertical="?attr/primaryTitleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="68dp"
        android:layout_height="21dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/pixil_button_main"
        android:fontFamily="@font/pixel_art"
        android:onClick="btn_add"
        android:text="@string/hinzufuegen"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="@color/mainText"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/tp_spieler"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tp_spieler"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/pixel_art"
        android:hint="@string/tp_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="?attr/primaryTitleColor"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Spieler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pixel_art"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/spielernamenstart"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="@color/mainText"
        android:textSize="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_zumSpiel"
        android:layout_width="55dp"
        android:layout_height="21dp"
        android:background="@drawable/pixil_button_main"
        android:fontFamily="@font/pixel_art"
        android:onClick="btn_zumSpiel"
        android:text="@string/start"
        android:textColor="?attr/primaryTitleColor"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_kategorie"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/pixel_art"
        android:text="@string/anzahlshots"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="#000000"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />

    <ListView
        android:id="@+id/lv_kategorie"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="12dp"
        android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
        android:scrollbarThumbVertical="?attr/primaryTitleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_kinder">

    </ListView>

    <Switch
        android:id="@+id/swch_zufall"
        android:layout_width="87dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/pixel_art"
        android:minHeight="48dp"
        android:scrollbarThumbHorizontal="?attr/primaryTitleColor"
        android:scrollbarThumbVertical="?attr/primaryTitleColor"
        android:text="@string/zufall"
        android:textColor="?attr/primaryTitleColor"
        android:textColorHint="?attr/primaryTitleColor"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etn_sucht"
        android:layout_width="52dp"
        android:layout_height="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="4"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

    <ImageButton
        android:id="@+id/rundenbasis_info"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/pixil_button_main"
        android:onClick="btn_info_rundenbasis"
        android:scaleType="fitCenter"
        android:src="@drawable/pixel_info"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

    <ImageButton
        android:id="@+id/zufall_info"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/pixil_button_main"
        android:onClick="btn_info_zufall"
        android:scaleType="fitCenter"
        android:src="@drawable/pixel_info"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/swch_zufall"
        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
        app:layout_constraintVertical_bias="0.32999998" />

</androidx.constraintlayout.widget.ConstraintLayout>